<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello"> Привет, Практикум</string>
    <string name="night_theme" translatable="false"> Темная тема </string>
    <string name="share" translatable="false"> Поделиться приложением </string>
    <string name="support" translatable="false"> Написать в поддержку </string>
    <string name="agreement" translatable="false"> Пользовательское соглашение </string>
    <string name="input_hint" translatable="false"> Поиск </string>
    <string name="agreement_doc" translatable="false"> "https://practicum.yandex.ru/profile/android-developer/" </string>
    <string name="message_support" translatable="false"> Спасибо разработчикам и разработчицам за крутое приложение! </string>
    <string name="subject_message_support" translatable="false"> Сообщение разработчикам и разработчицам приложения Playlist Maker" </string>
    <string name="android_yandex" translatable="false"> https://yandex.ru/legal/practicum_offer/ </string>
    <string name="support_email" translatable="false"> yep4yep@gmail.com </string>
    <string name="share_type" translatable="false"> text/plain </string>
    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
    <string name="something_went_wrong" translatable="false">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="btUpdate" translatable="false">Обновить</string>
    <string name="country" translatable="false">Страна</string>
    <string name="Genre" translatable="false">Жанр</string>
    <string name="year" translatable="false">Год</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="duration" translatable="false">Длительность</string>
    <string name="you_searched" translatable="false">Вы искали</string>
    <string name="text_clear_history" translatable="false">Очистить историю</string>
    <string name="fav_tracks" translatable="false">Избранные треки</string>
    <string name="fav_playlists" translatable="false">Плейлисты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="newPlaylist" translatable="false">Новый плейлист</string>
    <string name="noPlaylistFound" translatable="false">Вы не создали \n ни одного плейлиста</string>
    <string name="noFavTracksFound" translatable="false">Ваша медиатека пуста</string>

    <string name="search" translatable="false">Поиск</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="library" translatable="false">Медиатека</string>


    // dialog creating new playlist
    <string name="dialog_message" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="dialog_title" translatable="false">Завершить создание плейлиста?</string>
    <string name="dialog_finish" translatable="false">Завершить</string>
    <string name="dialog_cancel" translatable="false">Отмена</string>
    <string name="playlist_created" translatable="false">Плейлист "%s" создан</string>


    // dialog track delete from playlist
    <string name="dialog_delete_title" translatable="false">Удалить трек</string>
    <string name="dialog_delete_message" translatable="false">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="dialog_delete_delete" translatable="false">Удалить</string>
    <string name="dialog_delete_cancel" translatable="false">Отмена</string>

    <string name="no_tracks_to_share" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>

    //bottom sheet menu details screen
    <string name="share_bottom_sheet_menu_details_screen" translatable="false">Поделиться</string>
    <string name="edit_bottom_sheet_menu_details_screen" translatable="false">Редактировать информацию</string>
    <string name="delete_bottom_sheet_menu_details_screen" translatable="false">Удалить плейлист</string>


    // dialog playlist delete
    <string name="dialog_delete_playlist_title" translatable="false">Удалить плейлист</string>
    <string name="dialog_delete_playlist_message" translatable="false">Хотите удалить плейлист?</string>
    <string name="dialog_delete_playlist_delete" translatable="false">Да</string>
    <string name="dialog_delete_playlist_cancel" translatable="false">Нет</string>

    <string name="playlist_is_empty" translatable="false">В этом плейлисте еще нет треков</string>



</resources>