<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".audioplayer.presentation.search.SearchFragment">


    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            style="@style/HeadText"
            android:layout_marginLeft="16dp"
            android:text="@string/search" />
    </FrameLayout>

    <FrameLayout
        android:background="@drawable/backgroud_edit_text"
        android:id="@+id/container"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_width="match_parent"

        >

        <EditText
            style="@style/EditTextBar"
            android:autofillHints=""
            android:background="@drawable/backgroud_edit_text"
            android:drawableStart="@drawable/ic_search_small"
            android:ellipsize="end"
            android:hint="@string/input_hint"
            android:id="@+id/inputEditText"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:paddingEnd="27dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursos_edit_text"
            tools:text="апыпарыапрпрыпрыпреерооофаваррреяя" />

        <ImageView
            style="@style/ic_clear"
            android:id="@+id/clearIcon"
            android:src="@drawable/ic_clear_search"
            android:visibility="gone" />


    </FrameLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateTint="#3772E7"
        android:layout_gravity="center"
        android:layout_height="44dp"
        android:layout_width="44dp"
        android:visibility="gone" />


    <ScrollView
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:layout_marginTop="124dp"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/history_headline"
                    android:gravity="center_horizontal"
                    android:id="@+id/textSearchHistory"
                    android:layout_marginTop="8dp"
                    android:text="@string/you_searched"
                    android:visibility="visible"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcTrackList"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textSearchHistory"
                    app:layout_goneMarginTop="0dp" />


                <Button
                    style="@style/button_clear_history"
                    android:gravity="center"
                    android:id="@+id/buttonClearHistory"
                    android:layout_marginTop="24dp"
                    android:text="@string/text_clear_history"
                    android:textAllCaps="false"
                    android:visibility="visible"
                    app:cornerRadius="54dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rcTrackList" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_width="match_parent"
        tools:ignore="ExtraText">


        <ImageView
            style="@style/plaseholder_image"
            android:gravity="center"
            android:id="@+id/imagePlaceholder"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


        <TextView
            style="@style/placeholder_text"
            android:gravity="center"
            android:id="@+id/textPlaceholder"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagePlaceholder"
            tools:text="@string/something_went_wrong" />

        <Button
            style="@style/placeholder_button"
            android:clickable="true"
            android:gravity="center"
            android:id="@+id/buttonUpdatePlaceholder"
            android:layout_marginTop="24dp"
            android:text="@string/btUpdate"
            android:visibility="invisible"
            app:cornerRadius="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPlaceholder" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>