<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E6E8EB"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.playlistmakerfirstproject.audioplayer.presentation.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#E6E8EB"
        android:id="@+id/main_content"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/image_playlist_cover"
            android:layout_height="360dp"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:clickable="true"
            android:id="@+id/ic_back_arrow"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="16dp"
            android:src="@drawable/arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:ellipsize="marquee"
            android:fontFamily="@font/ys_display_bold"
            android:id="@+id/playlist_name"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:textColor="#1A1B22"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_playlist_cover"
            tools:text="Best songs 2021 Best songs 2021Best songs 2021Best songs 2021" />

        <TextView
            android:ellipsize="marquee"
            android:fontFamily="@font/ys_display_regular"
            android:id="@+id/playlist_details"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:textColor="#1A1B22"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_name"
            tools:text="Details about PlaylistDetails about PlaylistDetails about Playlist " />

        <TextView
            android:id="@+id/playlist_minutes"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:textColor="#1A1B22"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_details"
            tools:text="300 минут" />

        <ImageView
            android:id="@+id/divider"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_ellipse_black"
            app:layout_constraintBottom_toBottomOf="@id/playlist_minutes"
            app:layout_constraintStart_toEndOf="@id/playlist_minutes"
            app:layout_constraintTop_toTopOf="@id/playlist_minutes" />

        <TextView
            android:id="@+id/playlist_tracks"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:textColor="#1A1B22"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/playlist_details"
            tools:text="98 треков" />

        <ImageView
            android:id="@+id/icon_share"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_share_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_minutes" />

        <ImageView
            android:clickable="true"
            android:id="@+id/icon_menu"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_manu_black"
            app:layout_constraintStart_toEndOf="@id/icon_share"
            app:layout_constraintTop_toBottomOf="@id/playlist_minutes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/bottom_sheet"
        android:id="@+id/standard_bottom_sheet"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:behavior_hideable="false"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View style="@style/handler_bottom_sheet" />

        <TextView
            android:ellipsize="marquee"
            android:fontFamily="@font/ys_display_light"
            android:id="@+id/message_empty_list"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:text="@string/playlist_is_empty"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewBottomSheet"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent" />

    </LinearLayout>

    <View
        android:alpha="0"
        android:background="#99000000"
        android:id="@+id/dimOverlay"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="gone" />


    <LinearLayout
        style="@style/bottom_sheet"
        android:id="@+id/standard_bottom_sheet_menu_details"
        android:layout_height="505dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <View style="@style/handler_bottom_sheet" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/menu_playlist_info"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:background="@drawable/rounded_playlist_cover_small"
                android:clipToOutline="true"
                android:id="@+id/playlistCoverImage_Btn_sheet"
                android:layout_height="@dimen/art_work_height"
                android:layout_marginBottom="@dimen/image_margin"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_width="@dimen/art_work_width"
                android:scaleType="centerCrop" />


            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/playlist_view_small_name"
                    android:id="@+id/playlistName_btn_sheet"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="14dp"
                    android:layout_width="wrap_content"
                    tools:text="Best Songs 2021" />

                <TextView
                    style="@style/artist_time_track"
                    android:id="@+id/numberOfTracks_btn_sheet"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="1dp"
                    tools:text="89 треков" />

            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/btn_botton_sheet_menu"
            android:id="@+id/sharePlaylist"
            android:layout_marginTop="8dp"
            android:text="@string/share_bottom_sheet_menu_details_screen" />

        <Button
            style="@style/btn_botton_sheet_menu"
            android:id="@+id/editPlaylist"
            android:text="@string/edit_bottom_sheet_menu_details_screen" />

        <Button
            style="@style/btn_botton_sheet_menu"
            android:id="@+id/deletePlaylist"
            android:text="@string/delete_bottom_sheet_menu_details_screen" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>